# browser-napsack

./: README.md  pyproject.toml
docs/: index.md
docs/api-reference/: record.md
src/napsack/: __init__.py
src/napsack/label/: __main__.py  models.py  processor.py  video.py
src/napsack/label/clients/: __init__.py  bigquery.py  client.py  litellm.py  tinfoil.py
src/napsack/label/prompts/: default.txt  image_mode.txt  mirage.txt  screenshots_only.txt
src/napsack/label/prompts/output/: dense.txt  dense_image.txt  standard.txt  standard_image.txt
src/napsack/record/: __main__.py  sanitize.py
src/napsack/record/handlers/: input_event.py  screenshot.py  window.py
src/napsack/record/models/: image.py
src/napsack/record/monitor/: summary.py
src/napsack/record/workers/: aggregation.py  screenshot.py
src/record/: constants.py
